<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:scrollingCache="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/overlay_dark" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="@dimen/margin_16dp">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/margin_6dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_32" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="-40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/silver_linings_playbook"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/off_white"
                    app:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/off_white" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlay_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/off_white" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_9_5_10"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/off_white" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2015_06_09"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/popularity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/off_white" />

                    <TextView
                        android:id="@+id/tv_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_13_438976"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/vote_count"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/off_white" />

                    <TextView
                        android:id="@+id/tv_voteCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2334"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/overlay_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/off_white"
                app:fontFamily="sans-serif-medium" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:lineSpacingExtra="@dimen/margin_3dp"
                android:text="@string/vivamus_porttitor_erat_at_aliquam_mollis_risus_ligula_suscipit_metus_id_semper_nisi_dui_lacinia_leo_praesent_at_feugiat_sem_vivamus_consectetur_arcu_sit_amet_metus_efficitur_dapibus_sed_metus_ligula_efficitur_quis_finibus_nec_pellentesque_nec_nulla_nunc_nec_magna_iaculis_turpis_vehicula_condimentum_id_lobortis_lectus_n_nquisque_augue_diam_convallis_nec_mollis_in_placerat_nec_elit_aliquam_non_erat_tristique_consequat_tortor_ultricies_sodales_erat_aliquam_quis_enim_eu_nulla_facilisis_sollicitudin_eu_mollis_mauris_donec"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/off_white"
                android:visibility="gone" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/off_white"
                android:text="@string/retry"
                android:textColor="@color/grey"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
