<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/gallery_image"
            android:scaleType="centerCrop"
            android:src="@drawable/image_6"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_16dp"
            app:layout_constraintBottom_toBottomOf="parent">


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/top_gun"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/vivamus_porttitor_erat_at_aliquam_mollis_risus_ligula_suscipit_metus_id_semper_nisi_dui_lacinia_leo_praesent_at_feugiat_sem_vivamus_consectetur_arcu_sit_amet_metus_efficitur_dapibus_sed_metus_ligula_efficitur_quis_finibus_nec_pellentesque_nec_nulla_nunc_nec_magna_iaculis_turpis_vehicula_condimentum_id_lobortis_lectus_n_nquisque_augue_diam_convallis_nec_mollis_in_placerat_nec_elit_aliquam_non_erat_tristique_consequat_tortor_ultricies_sodales_erat_aliquam_quis_enim_eu_nulla_facilisis_sollicitudin_eu_mollis_mauris_donec"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favourite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <CheckBox
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_3dp"
                android:button="@drawable/star_selector"
                android:buttonTint="@color/gold"
                android:checked="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_5"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>